# anticrysis

./: .dockerignore  .gitignore  Dockerfile  README.md  activate.sh  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  run-backend.sh  run-frontend.sh  test.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: anticrisis.py  auth.py  calc.py  deps.py  organizations.py
backend/app/calc_model/: __init__.py  evaluator.py  input_mapping.json  loader.py  runner.py
backend/app/calc_model/exported/: _workbook.json  Данные.json
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  anticrisis.py  user.py
backend/app/schemas/: anticrisis.py  auth.py  organization.py
backend/app/services/: coefficients.py  crisis_classifier.py  fin_model.py
backend/scripts/: export_excel_to_json.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  ErrorBoundary.tsx  Layout.tsx  api.ts  index.css  main.tsx  recharts.d.ts
frontend/src/pages/: AnalyticsDashboard.tsx  CalcModel.tsx  CalculationTable.tsx  Dashboard.tsx  Login.tsx  Organizations.tsx  PeriodForm.tsx  Plans.tsx  Register.tsx
