[project]
name = "anticrisis-backend"
version = "0.1.0"
description = "API антикризисного управления"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.25",
    "pydantic[email]>=2.6",
"email-validator>=2.0",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "aiosqlite>=0.19",
]

[project.scripts]
run = "uvicorn:main"
